# PassHiveCLI

./: Cargo.toml
src/: cli.rs  crypto.rs  db.rs  main.rs  os_work.rs
src/db/: db_work.rs  mod.rs  models.rs
